[gd_scene load_steps=2 format=3 uid="uid://target_panel_001"]

[ext_resource type="Script" path="res://UI/TargetPanel/target_panel.gd" id="1"]

[node name="TargetPanel" type="PanelContainer"]
offset_right = 300.0
offset_bottom = 250.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TargetName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ðŸŽ¯ 150 Yard Target"
horizontal_alignment = 1
autowrap_mode = 0

[node name="TargetDistance" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Distance: 150 yards"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LastShot" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Last Shot: ---"

[node name="SessionScore" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Score: 0 pts (0 shots)"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Stats" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Session Stats:
  No shots yet"
